--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
     <h1>Git sos lo mejor</h1>
     <h2>Aguante Netlify</h2>
+    <a href="registro.html"> Ir a registro</a>
+    <a href="curso.html"> Ir al curso</a>
 </body>
 
 </html>
