--- a/registro.html
+++ b/registro.html
@@ -12,7 +12,7 @@
     <form></form>
     <nav>
         <a href="index.html">Ir al Inicio</a>
-        <a href="index.html">Ir al Registro</a>
+        <a href="curso.html">Ir al Curso</a>
     </nav>
 </body>
 
