--- a/curso.html
+++ b/curso.html
@@ -11,7 +11,7 @@
     <h1>Curso de Programación</h1>
   <nav>
     <a href="index.html">Ir al Inicio</a>
-    <a href="index.html">Ir al Registro</a>
+    <a href="registro.html">Ir al Registro</a>
   </nav>
 </body>
 
